<resources>
    <string name="app_name">My Wallet</string>
    <string name="profile_information">Profile Information</string>
    <string name="edit_pencil_icon">🖊</string>
    <string name="name">Name</string>
    <string name="email_sample">example123@example.com</string>
    <string name="description_image">Profile picture from user</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="go_back">Go Back</string>
    <string name="new_income">New Income</string>
    <string name="new_expense">New Expense</string>
    <string name="new_transaction">New Transaction</string>
    <string name="hint_amount">0.00 €</string>
    <string name="description">Description: ...</string>
    <string name="date_hint">Select a date</string>
    <string name="time_hint">Select a time</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="item">Item</string>
    <string name="categoriesManager">Categories Manager</string>
    <string name="expenses">Expenses</string>
    <string name="incomes">Incomes</string>
    <string name="addCategory">Add new Category</string>
</resources>