<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/categoryTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/item"
        android:textSize="24sp"/>

    <LinearLayout
        android:id="@+id/imageLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="14sp"
        android:paddingHorizontal="0sp">

        <ImageView
            android:id="@+id/imageEdit"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/edit"
            android:gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@drawable/ui_icon_edit" />

        <ImageView
            android:id="@+id/imageDelete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10sp"
            android:contentDescription="@string/delete"
            android:gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@drawable/ui_icon_delete" />
    </LinearLayout>
</LinearLayout>