<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".ExpenseActivity">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/new_transaction"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_amount"
            android:inputType="numberDecimal"
            android:textColorHint="@color/deep_space_sparkle"
            android:minWidth="50dp"
            android:maxLength="24"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/categoriesSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:textSize="16sp" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:autofillHints=""
        android:ems="10"
        android:focusable="true"
        android:gravity="center"
        android:hint="@string/date_hint"
        android:minHeight="48dp"
        android:text="Date"
        android:textColorHint="@color/deep_space_sparkle"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:autofillHints=""
        android:ems="10"
        android:focusable="true"
        android:gravity="center"
        android:hint="@string/date_hint"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="@color/deep_space_sparkle"
        android:textSize="18sp" />
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"
            android:autofillHints=""
            android:ems="10"
            android:focusable="true"
            android:gravity="center"
            android:hint="@string/date_hint"
            android:minHeight="48dp"
            android:text="Time"
            android:textColorHint="@color/deep_space_sparkle"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/timeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:minHeight="48dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:ems="10"
            android:focusable="true"
            android:gravity="center"
            android:hint="@string/time_hint"
            android:inputType="date"
            android:textColorHint="@color/deep_space_sparkle"
            android:textSize="18sp" />

    </LinearLayout>

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:maxWidth="488dp"
            android:maxHeight="488dp"
            android:maxLines="5"
            android:padding="10dp"
            android:background="@drawable/edittext_border"
            android:scrollbars="vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:autofillHints=""
            android:maxLength="500" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/cancel"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/go_back"
                android:textSize="16sp"
                android:visibility="invisible"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/save"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>